<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/ll_tab"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_below="@+id/RRToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >


            <TextView
                android:id="@+id/txtMonthly"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:padding="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/monthly_breakdown"
                android:textColor="@color/blue"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:id="@+id/txtCustomers"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/customers"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp" />


            <TextView
                android:id="@+id/txtProduct"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/product"
                android:textColor="@color/green"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


        <FrameLayout
            android:layout_below="@+id/ll_tab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_other"
            />

    </RelativeLayout>

</layout>
