<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo"
            />

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/_20sdp"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/natural_gray">

                <EditText
                    android:textSize="@dimen/_14sdp"
                    android:id="@+id/et_Emaillogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/mail"
                    android:text=""
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColorHint="@color/natural_gray">

                <EditText
                    android:textSize="@dimen/_14sdp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/password"
                    android:text=""
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_marginTop="@dimen/_10sdp"
                android:id="@+id/loginID"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/btn_bg"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="Sign In"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <RelativeLayout
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                >

                <RelativeLayout
                    android:id="@+id/RRforger"
                    android:layout_toLeftOf="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:padding="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />


                </RelativeLayout>

                <View
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/black"
                    android:id="@+id/view"
                    android:layout_centerInParent="true"
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    >

                </View>


                <RelativeLayout
                    android:id="@+id/RR_SignUp"
                    android:layout_toRightOf="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <TextView
                        android:padding="@dimen/_5sdp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_an_account"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />


                </RelativeLayout>

            </RelativeLayout>


        </LinearLayout>


    </RelativeLayout>

</layout>