<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <RelativeLayout
            android:background="@color/blue"
            android:id="@+id/RRToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <RelativeLayout
                android:id="@+id/RRBack"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/back"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp">

                </ImageView>

            </RelativeLayout>

            <TextView
                android:layout_centerInParent="true"
                android:padding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forget Password"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/RRToolbar"
            android:padding="@dimen/_15sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_phone_number_we_will_send_you_reset_code"
                android:textColor="@color/natural_gray"
                android:textSize="@dimen/_14sdp" />

            <RelativeLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/edt_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                >

                <TextView
                    android:id="@+id/txtNumber"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableRight="@drawable/drop_dwn"
                    android:paddingLeft="@dimen/_20sdp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+41"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <View
                    android:id="@+id/view_n"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@color/natural_gray"
                    android:layout_toRightOf="@+id/txtNumber"
                    android:layout_width="1sp"
                    android:layout_height="match_parent"
                    >

                </View>

                <EditText
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:hint="987456321"
                    android:inputType="number"
                    android:padding="@dimen/_10sdp"
                    android:background="@null"
                    android:layout_toRightOf="@+id/view_n"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                </EditText>

            </RelativeLayout>

            <TextView
                android:layout_marginTop="@dimen/_100sdp"
                android:id="@+id/txtSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/btn_bg"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/send_code"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </RelativeLayout>

</layout>