<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:scaleType="fitCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/logo"
                    />


                <TextView
                    android:textStyle="bold"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_industry"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_16sdp" />


                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >


                <RadioButton
                    android:buttonTint="@color/teal_200"
                    android:textSize="@dimen/_16sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="Prduct Sales"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </RadioButton>

                <RadioButton
                    android:checked="true"
                    android:textSize="@dimen/_16sdp"
                    android:paddingLeft="@dimen/_8sdp"
                    android:text="Service Sales"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </RadioButton>
                </RadioGroup>

                <LinearLayout
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:paddingRight="@dimen/_20sdp"
                    android:paddingLeft="@dimen/_20sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_Email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/natural_gray">

                        <EditText
                            android:textSize="@dimen/_14sdp"
                            android:id="@+id/et_Emaillogin"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="FirstName"
                            android:drawableLeft="@drawable/mail"
                            android:text=""
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColorHint="@color/natural_gray">

                        <EditText
                            android:textSize="@dimen/_14sdp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="LastName"
                            android:drawableLeft="@drawable/password"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColorHint="@color/natural_gray">

                        <EditText
                            android:textSize="@dimen/_14sdp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="@string/email"
                            android:drawableLeft="@drawable/password"
                            android:text=""
                            android:inputType="textEmailAddress"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColorHint="@color/natural_gray">

                        <EditText
                            android:textSize="@dimen/_14sdp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="@string/mobile"
                            android:drawableLeft="@drawable/password"
                            android:text=""
                            android:inputType="number"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:textColorHint="@color/natural_gray">

                        <EditText
                            android:textSize="@dimen/_14sdp"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_45sdp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:hint="@string/password"
                            android:drawableLeft="@drawable/password"
                            android:text=""
                            android:inputType="textPassword"
                            android:textColor="@color/black" />

                    </com.google.android.material.textfield.TextInputLayout>



                    <TextView
                        android:layout_marginTop="@dimen/_10sdp"
                        android:id="@+id/loginID"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:background="@drawable/btn_bg"
                        android:elevation="@dimen/_5sdp"
                        android:gravity="center"
                        android:padding="@dimen/_12sdp"
                        android:text="Sign In"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/RRSigniIn"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:padding="@dimen/_5sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_have_an_account_sign_in"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>