<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

        <RelativeLayout
            android:background="@color/blue"
            android:id="@+id/RRToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <RelativeLayout
                android:id="@+id/RRBack"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/back"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp">

                </ImageView>

            </RelativeLayout>

            <TextView
                android:layout_centerInParent="true"
                android:padding="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_confirmation"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/RRToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="Confirmation Code"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_18sdp" />

            <TextView
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_verification"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />


            <LinearLayout
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp">

                <RelativeLayout
                    android:elevation="10sp"
                    android:layout_margin="5sp"
                    android:background="@drawable/bg_white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:elevation="10sp"
                    android:layout_margin="5sp"
                    android:background="@drawable/bg_white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp" />


                </RelativeLayout>

                <RelativeLayout
                    android:elevation="10sp"
                    android:layout_margin="5sp"
                    android:background="@drawable/bg_white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp" />


                </RelativeLayout>

                <RelativeLayout
                    android:elevation="10sp"
                    android:layout_margin="5sp"
                    android:background="@drawable/bg_white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_18sdp" />


                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_100sdp"
                android:gravity="center"
                android:drawablePadding="@dimen/_10sdp"
                android:drawableLeft="@drawable/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Resend"
                android:textColor="@color/natural_gray"
                android:textSize="@dimen/_16sdp" />


            <TextView
              android:layout_marginTop="@dimen/_20sdp"
                android:id="@+id/txtSend"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/btn_bg"
                android:elevation="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_12sdp"
                android:text="@string/confirm_code"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </RelativeLayout>


</layout>